<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chemcalc.Chlorine"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvGallons2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterGallons"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/gallonsChlorineED"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enterGallons" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tvCLmeasurement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/measurement"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/chlorineMeasurementET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/EnterChlorineMeasurement" />

        <TextView
            android:id="@+id/tvChooseChlorine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/typeOfChlorine"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/chlorineSpiner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/ChlorineTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adjustment"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.34" >

            <EditText
                android:id="@+id/adjustementChlorine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/resetB"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="24dp"
                android:ems="10"
                android:hint="@string/adjustmentDisplay"
                android:inputType="number" />

            <Button
                android:id="@+id/resetB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="19dp"
                android:text="@string/reset" />

        </RelativeLayout>

    </LinearLayout>

</FrameLayout>

