<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chemcalc.MainActivity$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calcualateB"
        android:layout_marginTop="23dp"
        android:layout_toLeftOf="@+id/tvGallons"
        android:orientation="vertical" >
    </LinearLayout>

    <Button
        android:id="@+id/calcualateB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/flowET"
        android:layout_marginTop="27dp"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/tvGallons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/calcualateB"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="14dp"
        android:text="@string/gallons"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/gallonsET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvGallons"
        android:layout_below="@+id/tvGallons"
        android:ems="10"
        android:hint="@string/enterGallons" />

    <TextView
        android:id="@+id/tvFlow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/gallonsET"
        android:layout_below="@+id/gallonsET"
        android:layout_marginTop="22dp"
        android:text="@string/flow"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/flowET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvFlow"
        android:layout_below="@+id/tvFlow"
        android:ems="10"
        android:hint="This is the flow your pool should have" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/resetb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tvGallons"
        android:layout_below="@+id/calcualateB"
        android:layout_marginTop="21dp"
        android:text="@string/reset" />

    <Button
        android:id="@+id/chlorineB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/resetb"
        android:layout_alignBottom="@+id/resetb"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/calcualateB"
        android:text="@string/chlorine" />

</RelativeLayout>